--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="shortcut icon"
+      href="image/logo.favicon.ico"
+      type="image/x-icon"
+    />
     <title>Tic-tac-toe JavaScript</title>
   </head>
   <body>
